Fixed header and footer. Need to change spacing now due to the header not being in the flow of the page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,21 @@
 /* Affects all pages */
 
+.page-footer, #pageHeader {
+  position: fixed;
+  z-index: 5;
+  right: 0;
+  left: 0;
+}
+
+.page-footer {
+  bottom: 0;
+}
+
+#pageHeader {
+  top: 0;
+}
+
+
 html,
 body {
   height: 100%;
